Refactored about.text and child elements in an effort to fix gap issue.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,12 +11,10 @@ $color5: #e4f1fe;
 html {
   font-family: 'Alegreya Sans', sans-serif;
   font-size: 20px;
-  width: 100%; //added for gap issue
 }
 body {
   margin: 0;
   padding: 0;
-  width: 100%; //added for gap issue
 }
 h1, h2, h3, h4, h5, h6, p, ul {
   margin: 0;
@@ -91,10 +89,9 @@ h1, h2, h3, h4, h5, h6, p, ul {
   justify-content: space-between;
   position: fixed;
   top: 0;
-  left: 0; //added for gap issue
   box-shadow: 0 -.1em 4px -1px $color3 inset;
   height: 2.25em; //Added this trying to fix nav scrunch on mobile
-  width: 80%;
+  width: 100%;
   background: $color4;
   box-sizing: border-box; //Added this trying to fix mobile side gap ( to possibly adjust for padding).
   z-index: 999;
@@ -193,7 +190,6 @@ h1, h2, h3, h4, h5, h6, p, ul {
   position: relative;
   @extend %flex-centered;
   height: 100vh;
-  width: 100%; //added for gap issue
   background-blend-mode: multiply;
   background-color: $color2;
   background-image: url(/assets/gplay.png);
@@ -251,24 +247,25 @@ h1, h2, h3, h4, h5, h6, p, ul {
   background-color: $color5;
   .about-text {
     @extend %flex-centered;
-    flex-direction: column;    
+    flex-direction: column;
     margin: 4em 1.5em;
+    width: 100%;
     text-align: justify;
     h1 {
       font-size: 2em;
       color: $color2;
     }
     h1.statement {
-      margin-bottom: 2em;
+      margin: 0 .5em 2em .5em;
       border-left: 5px solid $color2;
       padding-left: .5em;
-      width: 85vw;
     }
     p.summary {
-      width: 85vw;
+      margin: 0 1em 3em 1em;
       font-size: 1.3em;
-      margin: 0 1em 3em;
       line-height: 1.5em;
+
+
     }
     h1.skills {
       margin-bottom: 1em;
